Porcentual button works now, but displays weird things when there are too much decimals, fixing that asap

--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,8 @@ body{
     height:70px;
     color:#ffffff;
     font-size:60px;
-    text-align:right;
-    overflow:hidden;
+    text-align:left;
+    
 }
 
 
